--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry excluding="Projetoo2.java" kind="src" path="src"/>
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aluno/Downloads/jackson-all-1.9.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/aluno/Documents/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
